--- a/index.html
+++ b/index.html
@@ -75,14 +75,15 @@
                     <div class="author-info" style="background-image:url(images/background/3.jpg)">
                         <div class="image"><img src="images/resource/user.png" alt=""></div>
                         <div class="author">
-                            <h3>Mahira Rashid</h3>
+                            <h3>Ruyi Song</h3>
                             <div class="designation">
                                 Hi i’m
                                 <div class="typing-title">
-                                    <p>a <strong>web developer.</strong></p>
-                                    <p>a <strong>web Designer.</strong></p>
+                                    <p>a <strong>Ph.D. candidate</strong></p>
+                                    <p>a <strong>graduate student</strong></p>
                                     <p>a <strong>photographer.</strong></p>
                                 </div>
+                                in Zhejiang University.
                                 <span class="typed-title"></span>
                             </div>
                         </div>
@@ -615,4 +616,5 @@
 
 </body>
 </html>
+
 
