--- a/index.html
+++ b/index.html
@@ -79,11 +79,9 @@
                             <div class="designation">
                                 Hi i’m
                                 <div class="typing-title">
-                                    <p>a <strong>Ph.D. candidate</strong></p>
-                                    <p>a <strong>graduate student</strong></p>
-                                    <p>a <strong>photographer.</strong></p>
+                                    <p>a <strong>Ph.D. candidate.</strong></p>
+                                    <p>a <strong>graduate student.</strong></p>
                                 </div>
-                                in Zhejiang University.
                                 <span class="typed-title"></span>
                             </div>
                         </div>
@@ -120,9 +118,8 @@
                                     <div class="designation">
                                         Hi i’m
                                         <div class="typing-title">
-                                            <p>a <strong>web developer.</strong></p>
-                                            <p>a <strong>web Designer.</strong></p>
-                                            <p>a <strong>photographer.</strong></p>
+                                            <p>a <strong>Ph.D. candidate.</strong></p>
+                                            <p>a <strong>graduate student.</strong></p>
                                         </div>
                                         <span class="typed-title"></span>
                                     </div>
