modify personal introduction

--- a/index.html
+++ b/index.html
@@ -77,12 +77,13 @@
                         <div class="author">
                             <h3>Ruyi Song</h3>
                             <div class="designation">
-                                Hi i’m
+                                Hi I’m
                                 <div class="typing-title">
                                     <p>a <strong>Ph.D. candidate.</strong></p>
                                     <p>a <strong>graduate student.</strong></p>
                                 </div>
                                 <span class="typed-title"></span>
+                                in Zhejiang University.
                             </div>
                         </div>
                         <div class="link-btn">
@@ -116,12 +117,13 @@
                                 <div class="author">
                                     <h3>Mahira Rashid</h3>
                                     <div class="designation">
-                                        Hi i’m
+                                        Hi I’m
                                         <div class="typing-title">
-                                            <p>a <strong>Ph.D. candidate.</strong></p>
-                                            <p>a <strong>graduate student.</strong></p>
+                                            <p>a <strong>Ph.D. candidate</strong></p>
+                                            <p>a <strong>graduate student</strong></p>
                                         </div>
                                         <span class="typed-title"></span>
+                                        in Zhejiang University.
                                     </div>
                                 </div>
                                 <div class="text">Dolor sit amet consectetur elit sed do eiusmod tempor incididunt labore dolore mega aliqua enim minim veniam.</div>
@@ -613,5 +615,6 @@
 
 </body>
 </html>
+
 
 
