--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                             <div class="designation">
                                 Hi I’m
                                 <div class="typing-title">
-                                    <p>a <strong>Ph.D. candidate.</strong></p>
-                                    <p>a <strong>graduate student.</strong></p>
+                                    <p>a <strong>Ph.D. candidate</strong></p>
+                                    <p>a <strong>graduate student</strong></p>
                                 </div>
                                 <span class="typed-title"></span>
                                 in Zhejiang University.
@@ -615,6 +615,7 @@
 
 </body>
 </html>
+
 
 
 
