--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <div class="author">
                             <h3>Ruyi Song</h3>
                             <div class="designation">
-                                Hi I’m
+                                Hi I'm
                                 <div class="typing-title">
                                     <p>a <strong>Ph.D. candidate</strong></p>
                                     <p>a <strong>graduate student</strong></p>
@@ -115,9 +115,9 @@
                             <div class="card-inner wow fadeInUp" data-wow-duration="2s">
                                 <div class="image"><img src="images/resource/user.png" alt=""></div>
                                 <div class="author">
-                                    <h3>Mahira Rashid</h3>
+                                    <h3>Ruyi Song</h3>
                                     <div class="designation">
-                                        Hi I’m
+                                        Hi I'm
                                         <div class="typing-title">
                                             <p>a <strong>Ph.D. candidate</strong></p>
                                             <p>a <strong>graduate student</strong></p>
@@ -615,6 +615,7 @@
 
 </body>
 </html>
+
 
 
 
