change Zhejiang University to ZJU

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                     <p>a <strong>graduate student</strong></p>
                                 </div>
                                 <span class="typed-title"></span>
-                                in Zhejiang University.
+                                in ZJU.
                             </div>
                         </div>
                         <div class="link-btn">
@@ -615,6 +615,7 @@
 
 </body>
 </html>
+
 
 
 
