--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="container" data-animation-in="fadeInLeft" data-animation-out="fadeOutLeft">
                 <div class="card-wrapper">
                     <div class="author-info" style="background-image:url(images/background/3.jpg)">
-                        <div class="image"><img src="images/resource/user.png" alt=""></div>
+                        <div class="image"><img src="images/resource/user picture.jpg" alt=""></div>
                         <div class="author">
                             <h3>Ruyi Song</h3>
                             <div class="designation">
@@ -113,7 +113,7 @@
                         <div class="card-home card-item active" id="home" style="background-image:url(images/background/1.jpg)">
 
                             <div class="card-inner wow fadeInUp" data-wow-duration="2s">
-                                <div class="image"><img src="images/resource/user.png" alt=""></div>
+                                <div class="image"><img src="images/resource/user picture.jpg" alt=""></div>
                                 <div class="author">
                                     <h3>Ruyi Song</h3>
                                     <div class="designation">
