--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                             </div>
                         </div>
                         <div class="link-btn">
-                            <a href="http://www.17sucai.com/" class="theme-btn btn-style-one">Download CV</a>
+                            <a href="CV.pdf" class="theme-btn btn-style-one" download>Download CV</a>
                         </div>
                         <ul class="social-icon-two">
                             <li><a href="#"><span class="fa fa-facebook"></span></a></li>
@@ -126,10 +126,10 @@
                                         in Zhejiang University.
                                     </div>
                                 </div>
-                                <div class="text">Dolor sit amet consectetur elit sed do eiusmod tempor incididunt labore dolore mega aliqua enim minim veniam.</div>
+                                <div class="text">Hello World!</div>
                                 <div class="link-btn">
-                                    <a href="#" class="theme-btn btn-style-one">Download CV</a>
-                                    <a href="#" class="theme-btn btn-style-two">Hire Me</a>
+                                    <a href="CV.pdf" class="theme-btn btn-style-one" download>Download CV</a>
+                                    <a href="mailto:ruyisong77@gmail.com" class="theme-btn btn-style-two">Email Me</a>
                                 </div>
                                 <ul class="social-icon-two">
                                     <li><a href="#"><span class="fa fa-facebook"></span></a></li>
