--- a/index.html
+++ b/index.html
@@ -16,6 +16,28 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 <!--[if lt IE 9]><script src="js/html5shiv.js"></script><![endif]-->
 <!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
+
+<script>
+function downloadCV() {
+    const correctPassword = "200468"; // set your password here
+    const password = prompt("请输入密码来下载简历：");
+    if (password === null) {
+        return;
+    }
+    if (password === correctPassword) {
+        // correct password
+        const link = document.createElement('a');
+        link.href = 'docs/CV.pdf';
+        link.download = 'CV.pdf';
+        document.body.appendChild(link);
+        link.click();
+        document.body.removeChild(link);
+    } else {
+        // wrong password
+        alert("wrong password. Access denied.");
+    }
+}
+</script>
 </head>
 
 <body>
@@ -87,7 +109,7 @@
                             </div>
                         </div>
                         <div class="link-btn">
-                            <a href="CV.pdf" class="theme-btn btn-style-one" download>Download CV</a>
+                            <a href="javascript:void(0);" onclick="downloadCV()" class="theme-btn btn-style-one">Download CV</a>
                         </div>
                         <ul class="social-icon-two">
                             <li><a href="#"><span class="fa fa-facebook"></span></a></li>
@@ -128,7 +150,7 @@
                                 </div>
                                 <div class="text">Hello World!</div>
                                 <div class="link-btn">
-                                    <a href="CV.pdf" class="theme-btn btn-style-one" download>Download CV</a>
+                                    <a href="javascript:void(0);" onclick="downloadCV()" class="theme-btn btn-style-one">Download CV</a>
                                     <a href="mailto:ruyisong77@gmail.com" class="theme-btn btn-style-two">Email Me</a>
                                 </div>
                                 <ul class="social-icon-two">
