download button modified

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <script>
 function downloadCV() {
     const correctPassword = "200468"; // set your password here
-    const password = prompt("请输入密码来下载简历：");
+    const password = prompt("need password to download CV:");
     if (password === null) {
         return;
     }
