modify about me skill button

--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@ function downloadCV() {
                                         <div class="inner-box">
                                             <div class="graph-outer">
                                                 <input type="text" class="dial" data-fgColor="#9147ff" data-bgColor="#f5f5f5" data-width="90" data-height="90" data-linecap="normal"  value="75">
-                                                <div class="inner-text count-box"><span class="count-text" data-stop="75" data-speed="2000"></span>%</div>
+                                                <div class="inner-text count-box"><span class="count-text" data-stop="50" data-speed="2000"></span>%</div>
                                             </div>
-                                            <h3>Design</h3>
+                                            <h3>C++</h3>
                                         </div>
                                     </div>
 
@@ -205,9 +205,9 @@ function downloadCV() {
                                         <div class="inner-box">
                                             <div class="graph-outer">
                                                 <input type="text" class="dial" data-fgColor="#ff5e7e" data-bgColor="#f5f5f5" data-width="90" data-height="90" data-linecap="normal"  value="75">
-                                                <div class="inner-text count-box"><span class="count-text" data-stop="75" data-speed="2000"></span>%</div>
+                                                <div class="inner-text count-box"><span class="count-text" data-stop="20" data-speed="2000"></span>%</div>
                                             </div>
-                                            <h3>HTML</h3>
+                                            <h3>C</h3>
                                         </div>
                                     </div>
 
@@ -216,9 +216,9 @@ function downloadCV() {
                                         <div class="inner-box">
                                             <div class="graph-outer">
                                                 <input type="text" class="dial" data-fgColor="#ffc713" data-bgColor="#f5f5f5" data-width="90" data-height="90" data-linecap="normal"  value="75">
-                                                <div class="inner-text count-box"><span class="count-text" data-stop="75" data-speed="2000"></span>%</div>
+                                                <div class="inner-text count-box"><span class="count-text" data-stop="20" data-speed="2000"></span>%</div>
                                             </div>
-                                            <h3>WordPress </h3>
+                                            <h3>Python</h3>
                                         </div>
                                     </div>
 
@@ -227,9 +227,9 @@ function downloadCV() {
                                         <div class="inner-box">
                                             <div class="graph-outer">
                                                 <input type="text" class="dial" data-fgColor="#51dbc3" data-bgColor="#f5f5f5" data-width="90" data-height="90" data-linecap="normal"  value="75">
-                                                <div class="inner-text count-box"><span class="count-text" data-stop="75" data-speed="2000"></span>%</div>
+                                                <div class="inner-text count-box"><span class="count-text" data-stop="10" data-speed="2000"></span>%</div>
                                             </div>
-                                            <h3>PHP </h3>
+                                            <h3>HTML</h3>
                                         </div>
                                     </div>
                                 </div>
