--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@ function downloadCV() {
                                     <div class="skill-block col-md-3 col-sm-4 col-xs-6">
                                         <div class="inner-box">
                                             <div class="graph-outer">
-                                                <input type="text" class="dial" data-fgColor="#9147ff" data-bgColor="#f5f5f5" data-width="90" data-height="90" data-linecap="normal"  value="75">
+                                                <input type="text" class="dial" data-fgColor="#9147ff" data-bgColor="#f5f5f5" data-width="90" data-height="90" data-linecap="normal"  value="50">
                                                 <div class="inner-text count-box"><span class="count-text" data-stop="50" data-speed="2000"></span>%</div>
                                             </div>
                                             <h3>C++</h3>
@@ -204,7 +204,7 @@ function downloadCV() {
                                     <div class="skill-block col-md-3 col-sm-4 col-xs-6">
                                         <div class="inner-box">
                                             <div class="graph-outer">
-                                                <input type="text" class="dial" data-fgColor="#ff5e7e" data-bgColor="#f5f5f5" data-width="90" data-height="90" data-linecap="normal"  value="75">
+                                                <input type="text" class="dial" data-fgColor="#ff5e7e" data-bgColor="#f5f5f5" data-width="90" data-height="90" data-linecap="normal"  value="20">
                                                 <div class="inner-text count-box"><span class="count-text" data-stop="20" data-speed="2000"></span>%</div>
                                             </div>
                                             <h3>C</h3>
@@ -215,7 +215,7 @@ function downloadCV() {
                                     <div class="skill-block col-md-3 col-sm-4 col-xs-6">
                                         <div class="inner-box">
                                             <div class="graph-outer">
-                                                <input type="text" class="dial" data-fgColor="#ffc713" data-bgColor="#f5f5f5" data-width="90" data-height="90" data-linecap="normal"  value="75">
+                                                <input type="text" class="dial" data-fgColor="#ffc713" data-bgColor="#f5f5f5" data-width="90" data-height="90" data-linecap="normal"  value="20">
                                                 <div class="inner-text count-box"><span class="count-text" data-stop="20" data-speed="2000"></span>%</div>
                                             </div>
                                             <h3>Python</h3>
@@ -226,7 +226,7 @@ function downloadCV() {
                                     <div class="skill-block col-md-3 col-sm-4 col-xs-6">
                                         <div class="inner-box">
                                             <div class="graph-outer">
-                                                <input type="text" class="dial" data-fgColor="#51dbc3" data-bgColor="#f5f5f5" data-width="90" data-height="90" data-linecap="normal"  value="75">
+                                                <input type="text" class="dial" data-fgColor="#51dbc3" data-bgColor="#f5f5f5" data-width="90" data-height="90" data-linecap="normal"  value="10">
                                                 <div class="inner-text count-box"><span class="count-text" data-stop="10" data-speed="2000"></span>%</div>
                                             </div>
                                             <h3>HTML</h3>
@@ -251,27 +251,18 @@ function downloadCV() {
                                             <!--Timeline Block-->
                                             <div class="timeline-block">
                                                 <div class="inner-box">
-                                                    <h4>Web Design</h4>
-                                                    <div class="date"><span>1998-2000</span> / University of stuties</div>
-                                                    <div class="text">Exceptur sint occaecat cupidatat non proident sunt culpa. </div>
+                                                    <h4>Ph.D Candidate</h4>
+                                                    <div class="date"><span>2026-now</span> / Zhejiang University</div>
+                                                    <div class="text">Major in Computer Science and Technology. </div>
                                                 </div>
                                             </div>
 
                                             <!--Timeline Block-->
                                             <div class="timeline-block">
                                                 <div class="inner-box">
-                                                    <h4>Web Development</h4>
-                                                    <div class="date"><span>1998-2000</span> / University of stuties</div>
-                                                    <div class="text">Exceptur sint occaecat cupidatat non proident sunt culpa. </div>
-                                                </div>
-                                            </div>
-
-                                            <!--Timeline Block-->
-                                            <div class="timeline-block">
-                                                <div class="inner-box">
-                                                    <h4>Specialization Course</h4>
-                                                    <div class="date"><span>1998-2000</span> / University of stuties</div>
-                                                    <div class="text">Exceptur sint occaecat cupidatat non proident sunt culpa. </div>
+                                                    <h4>Graduate</h4>
+                                                    <div class="date"><span>2022-2026</span> / Zhejiang University</div>
+                                                    <div class="text">Major in Computer Science and Technology. </div>
                                                 </div>
                                             </div>
                                             
