--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ function downloadCV() {
                                     <!--Column-->
                                     <div class="timeline-column col-md-6 col-sm-12 col-xs-12">
                                         <div class="inner">
-                                            <div class="col-header"><div class="icon-box"><div class="icon-inner"><div class="icon"><span class="flaticon-book"></span></div></div></div> <h2>Employment</h2></div>
+                                            <div class="col-header"><div class="icon-box"><div class="icon-inner"><div class="icon"><span class="flaticon-book"></span></div></div></div> <h2>Experience</h2></div>
                                             
                                             <!--Timeline Block-->
                                             <div class="timeline-block">
@@ -272,30 +272,22 @@ function downloadCV() {
                                     <!--Column-->
                                     <div class="timeline-column col-md-6 col-sm-12 col-xs-12">
                                         <div class="inner">
-                                            <div class="col-header"><div class="icon-box"><div class="icon-inner"><div class="icon"><span class="flaticon-case"></span></div></div></div> <h2>Experience</h2></div>
+                                            <div class="col-header"><div class="icon-box"><div class="icon-inner"><div class="icon"><span class="flaticon-case"></span></div></div></div> <h2>Previous Work</h2></div>
                                             
                                             <!--Timeline Block-->
                                             <div class="timeline-block">
                                                 <div class="inner-box">
-                                                    <h4>Lead UI/UX Designer</h4>
-                                                    <div class="date"><span>2015-Present</span>  / Google inc.</div>
-                                                    <div class="text">Exceptur sint occaecat cupidatat non proident sunt culpa. </div>
+                                                    <h4>MultiModal AI</h4>
+                                                    <div class="date"><span>2025-now</span>  / Zhejiang University</div>
+                                                    <div class="text">Vision-Language Action model </div>
                                                 </div>
                                             </div>
 
                                             <div class="timeline-block">
                                                 <div class="inner-box">
-                                                    <h4>Senior UI/UX Designer</h4>
-                                                    <div class="date"><span>2012-2014 </span> / Facebook inc.</div>
-                                                    <div class="text">Exceptur sint occaecat cupidatat non proident sunt culpa. </div>
-                                                </div>
-                                            </div>
-
-                                            <div class="timeline-block">
-                                                <div class="inner-box">
-                                                    <h4>Junior UI/UX Designer</h4>
-                                                    <div class="date"><span>2006-2011 </span>  / airbnb inc.</div>
-                                                    <div class="text">Exceptur sint occaecat cupidatat non proident sunt culpa. </div>
+                                                    <h4>MARL</h4>
+                                                    <div class="date"><span>2024-2025 </span> / Zhejiang University</div>
+                                                    <div class="text">Multi-Agent Reinforcement Learning </div>
                                                 </div>
                                             </div>
 
