--- a/index.html
+++ b/index.html
@@ -520,9 +520,9 @@ function downloadCV() {
                                 <div class="row clearfix">
                                     <div class="col-md-6">
                                         <ul class="list-style-two">
-                                            <li><span class="icon flaticon-signs"></span>PO Box 16122 Collins Street <br> West Victoria 8007 Canada </li>
-                                            <li><span class="icon flaticon-smartphone"></span>(+48) 564-334-21-22-34 <br>(+48) 564-334-21-25</li>
-                                            <li><span class="icon flaticon-note-1"></span>info@cretox.com <br>info@example.com</li>
+                                            <li><span class="icon flaticon-signs"></span>The State Key Laboratory of CAD&CG at Zhejiang University <br> Yuhangtang road 866, Hangzhou, Zhejiang, China </li>
+                                            <li><span class="icon flaticon-smartphone"></span>(+86) 15591840232 <br>(+86) ***********</li>
+                                            <li><span class="icon flaticon-note-1"></span>ruyisong77@gmail.com (prefer) <br>3220105868@zju.edu.cn</li>
                                         </ul>
                                     </div>
                                     <div class="col-md-6">
