update SMAC work

--- a/index.html
+++ b/index.html
@@ -358,9 +358,9 @@ function downloadCV() {
                                     <div class="projects-block col-md-6">
                                         <div class="inner-box">
                                             <figure class="image">
-                                                <img src="images/gallery/SMAC.png" alt="image">
+                                                <img src="images/gallery/SMAC-R1.png" alt="image">
                                                 <div class="overlay">
-                                                    <a class="lightbox-image option-btn" title="Image Caption Here" data-fancybox-group="example-gallery" href="images/gallery/SMAC.png">
+                                                    <a class="lightbox-image option-btn" title="Image Caption Here" data-fancybox-group="example-gallery" href="images/gallery/SMAC-R1.png">
                                                         <i class="fa fa-search"></i>
                                                     </a>                                
                                                 </div>
