update SMAC work link page

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@ function downloadCV() {
                                             <figure class="image">
                                                 <img src="images/gallery/SMAC-R1.png" alt="image">
                                                 <div class="overlay">
-                                                    <a class="lightbox-image option-btn" title="Image Caption Here" data-fancybox-group="example-gallery" href="images/gallery/SMAC-R1.png">
+                                                    <a class="option-btn" href="https://arxiv.org/abs/2410.16024" target="_blank" rel="noopener">
                                                         <i class="fa fa-search"></i>
                                                     </a>                                
                                                 </div>
