--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ function downloadCV() {
                         </div>
                         <!-- end item -->
                         <!-- card item -->
-                        <div class="card-services card-item" id="services" style="background-image:url(images/background/2.jpg)">
+                        <!-- <div class="card-services card-item" id="services" style="background-image:url(images/background/2.jpg)">
                             <div class="card-inner">
                                 <h4 class="title">Services</h4>
                                 <div class="row">
@@ -347,7 +347,7 @@ function downloadCV() {
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <!-- end item -->
                         <!-- card item -->
                         <div class="card-projects card-item" id="work" style="background-image:url(images/background/2.jpg)">
