--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@ function downloadCV() {
                                 <div class="news-block">
                                     <div class="inner-box">
                                         <div class="image">
-                                            <img src="images/blog/China/Guilin/Guilin1.jpg" alt="">
+                                            <img src="images/blog/China/Guilin/Guilin1.png" alt="">
                                             <div class="overlay">
                                                 <a class="link-btn" href="blog/blog-single.html">
                                                     <i class="fa fa-link"></i>
